# PocketDisplay

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  PROMPT_TEMPLATE.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  android_log.txt  build_output.txt  win_log.txt
.claude/: settings.local.json
android/: gradlew.bat  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pocketdisplay/app/: ConnectionManager.kt  CursorOverlayView.kt  DiscoveryClient.kt  LicensesActivity.kt  MainActivity.kt  StreamReceiver.kt  TcpStreamReceiver.kt  TcpTouchSender.kt  TouchSender.kt  VideoDecoder.kt
android/app/src/main/res/drawable/: cursor_arrow.xml  cursor_cross.xml  cursor_hand.xml  cursor_ibeam.xml  cursor_move.xml  cursor_no.xml  cursor_resize_h.xml  cursor_resize_nesw.xml  cursor_resize_nwse.xml  cursor_resize_v.xml  cursor_wait.xml  dot_connected.xml  dot_disconnected.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logo.xml  ic_nav_dashboard.xml  ic_nav_devices.xml
android/app/src/main/res/layout/: activity_licenses.xml  activity_main.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/raw/: third_party_licenses.txt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
tools/: convert_svg_to_vector.py  new_cursor_view.kt  prepare_assets.py
windows/: CMakeLists.txt  build.ps1  usb_connect.bat  vcpkg.json
windows/installer/: PocketDisplay.iss  uninstall-vdd.ps1
windows/resources/: resource.h  resource.rc
windows/src/: AdbUsbSetup.cpp  AdbUsbSetup.h  Encoder.cpp  Encoder.h  GuiApp.cpp  GuiApp.h  HwEncoder.cpp  HwEncoder.h  Protocol.h  ScreenCapture.cpp  ScreenCapture.h  Session.cpp  Session.h  TcpStreamer.cpp  TcpStreamer.h  TcpVideoServer.cpp  TcpVideoServer.h  TouchReceiver.cpp  TouchReceiver.h  UdpStreamer.cpp  UdpStreamer.h  VirtualDisplayDriver.cpp  VirtualDisplayDriver.h  main.cpp
